@@ -1,5 +1,6 @@
 This version:
   - win32 portability code (contributed by Dirk Gerrits)
+  - fix a bug in PDF export code on 64-bit systems (patch by Robert Buchholz)
 
 Version 0.4.5 (Oct 2, 2009):
   - bugfixes for GTK+ 2.16/2.17 issues with xinput events
